--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="header__container">
             
             <h1 class="header__logo">
-                Cre<span class="infinity-logo"><img src="./images/logo.svg" alt="a blue infinity logo"></span>mers
+                Cre<span class="infinity-logo"><img src="./images/logo.svg" alt="a blue infinity logo"></span>ives
             </h1>
     
-            <a href="" class="header__btn">
-                <button>
-                    Get the app
+            <a href="">
+                <button class="header__btn">
+                    Get App
                 </button>
             </a>
 
