working on hero section

--- a/index.html
+++ b/index.html
@@ -25,5 +25,28 @@
         </div>
     </header>
 
+    <main>
+
+        <section class="hero">
+
+            <h1 class="hero__title">
+                Creative Opportunitues
+            </h1>
+
+            <div class="hero-image__background">
+
+                <div class="hero-image">
+                    <img src="./images/iPhone 16.png" alt="an iphone 15">
+                </div>
+
+                <div class="hero-image">
+                    <img src="./images/iPhone 15.png" alt="an iPhone 16">
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
