hero section ongoing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
 
             <h1 class="hero__title">
-                Creative Opportunitues
+                Creative Opportunities
             </h1>
 
             <div class="hero-image__background">
