Done with hero section
this was chanllenging not gonna lie

--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
                 Creative. Opportunities.
             </h1>
 
-            <div class="hero-image__background">
+            <div class="hero__background">
 
-                <div class="hero-image">
-                    <img src="./images/iPhone 16.png" alt="an iphone 15">
-                </div>
+                <div class="hero-image__background">
 
-                <div class="hero-image">
-                    <img src="./images/iPhone 15.png" alt="an iPhone 16">
+                    <div class="hero__image img1">
+                        <img src="./images/iPhone 16.png" alt="an iphone 15">
+                    </div>
+    
+                    <div class="hero__image">
+                        <img src="./images/iPhone 15.png" alt="an iPhone 16">
+                    </div>
+                    
                 </div>
 
             </div>
