create about-us section
I updated the html content and created a scss file for the about-us section

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <section class="hero">
 
-            <h1 class="hero__title">
+            <h2 class="hero__title">
                 Creative. Opportunities.
-            </h1>
+            </h2>
 
             <div class="hero__background">
 
@@ -47,6 +47,88 @@
                     
                 </div>
 
+            </div>
+        </section>
+
+        <section class="about-us">
+
+            <div class="about-us__stories">
+                <h2 class="about-us__title">
+                    Where Every <span class="text-color">Portfolio</span> Unfolds A Unique Tale Of Creativity.
+                </h2>
+
+                <div class="about-us__carousel">
+                    <div class="about-us__images">
+                        <img src="./images/canvas.png" alt="carousel images">
+                    </div>
+
+                    <div class="about-us__images">
+                        <img src="./images/cream-background.png" alt="carousel images">
+                    </div>
+                    
+                    <div class="about-us__images">
+                        <img src="./images/cosmetics.png" alt="carousel images">
+                    </div>
+                </div>
+
+                <p class="about-us__paragraph">
+                    Discover the stories within each portfolio, where creativity knows no bounds. Explore a wide range of artistic expressions, from graphic design to photography, and be inspired by the diversity of our creative community
+                </p>
+            </div>
+
+            <div class="about-us__discover">
+                <h2 class="about-us__heading">
+                    Discover What <span class="text-color">CR8TIVES</span> Can Do!
+                </h2>
+
+                <div class="about-us__info">
+                    <div class="about-us__description">
+                        <div class="about-us__spans">
+                            <span class="about-us__span"></span>
+                            <span class="about-us__span"></span>
+                            <span class="about-us__span"></span>
+                        </div>
+
+                        <div class="about-us__paragraphs">
+                            <div class="about-us__words">
+
+                                <h3 class="about-us__heading-2">
+                                    <span class="text-color">Creative Networking</span>
+                                </h3>
+                                <p class="about-us__paragraph-2">
+                                    Connecting creative professionals and enabling them to build their professional network, fostering collaboration and connections within the creative community.
+                                </p>
+
+                            </div>
+
+                            <div class="about-us__words">
+
+                                <h3 class="about-us__heading-2">
+                                    Portfolio Showcase
+                                </h3>
+
+                                <p class="about-us__paragraph-2">
+                                    Allowing users to showcase their creative work and talents, creating a dynamic and captivating online portfolio to attract opportunities.
+                                </p>
+                            </div>
+
+                            <div class="about-us__words">
+
+                                <h3 class="about-us__heading-2">
+                                    Job Discovery
+                                </h3>
+
+                                <p class="about-us__paragraph-2">
+                                    Providing a platform where users can discover and apply for job opportunities relevant to their creative skills and interests, facilitating career growth within the creative industry.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="about-us__iphone">
+                        <img src="./images/iphone-15-portrait.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
 
