Done with about-us section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 </p>
             </div>
 
-            <div class="about-us__discover">
+            <div class="about-us__discover wh">
                 <h2 class="about-us__heading">
-                    Discover What <span class="text-color">CR8TIVES</span> Can Do!
+                    Discover What <br><span class="text-color">CR8TIVES</span> Can Do!
                 </h2>
 
                 <div class="about-us__info">
