start of the prompt setion

--- a/index.html
+++ b/index.html
@@ -132,6 +132,51 @@
             </div>
         </section>
 
+        <section class="prompt">
+
+            <div class="prompt__description">
+                <h2 class="prompt__heading">
+                    Ready to Spark Your Creative Journey? Dive into a World of Imagination and Opportunity with <span class="text-color">CR8TIVES.</span>
+                </h2>
+
+                <a href="">
+                    <button class="prompt__btn">
+                        Get App
+                    </button>
+                </a>
+            </div>
+
+            <div class="prompt__images">
+                <div class="prompt__iphone">
+
+                    <div class="prompt__iphone-15">
+                        <img src="./images/iPhone 15 Pro Portrait Mockup.png" alt="iphone-15-portrait">
+                    </div>
+
+                </div>
+
+                <div class="prompt__three-iphones">
+                    <div class="prompt__iphones-container">
+                        <div class="prompt__1st-iphone">
+                            <img src="./images/iPhone 15 Pro Portrait Cut.png" alt="an-iphone-15-Pro">
+                        </div>
+
+                        <div class="prompt__2st-iphone">
+                            <img src="./images/iphone-cut.png" alt="an-iphone-15-Pro">
+                        </div>
+
+                        <div class="prompt__3st-iphone">
+                            <img src="./images/iphone-cut-3.png" alt="an-iphone-15-Pro">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="prompt__creatives">
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
