first part of prompt done

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="prompt">
+        <section class="prompt wh">
 
             <div class="prompt__description">
                 <h2 class="prompt__heading">
