Done with prompt section
phew

--- a/index.html
+++ b/index.html
@@ -147,32 +147,36 @@
             </div>
 
             <div class="prompt__images">
-                <div class="prompt__iphone">
+                <div class="prompt__iphone bg-grey b-r">
 
-                    <div class="prompt__iphone-15">
+                    <div class="prompt__iphone-15 iphone">
                         <img src="./images/iPhone 15 Pro Portrait Mockup.png" alt="iphone-15-portrait">
                     </div>
 
                 </div>
 
-                <div class="prompt__three-iphones">
+                <div class="prompt__three-iphones bg-grey b-r">
+
                     <div class="prompt__iphones-container">
-                        <div class="prompt__1st-iphone">
+                        <div class="prompt__1st-iphone iphone iphones">
                             <img src="./images/iPhone 15 Pro Portrait Cut.png" alt="an-iphone-15-Pro">
                         </div>
 
-                        <div class="prompt__2st-iphone">
+                        <div class="prompt__2st-iphone iphone iphones">
                             <img src="./images/iphone-cut.png" alt="an-iphone-15-Pro">
                         </div>
 
-                        <div class="prompt__3st-iphone">
+                        <div class="prompt__3st-iphone iphone iphones">
                             <img src="./images/iphone-cut-3.png" alt="an-iphone-15-Pro">
                         </div>
                     </div>
+
                 </div>
 
-                <div class="prompt__creatives">
-
+                <div class="prompt__creatives b-r">
+                    <h1 class="prompt__logo">
+                        Cre<span class="infinity-logo-w"><img src="./images/logo-white.svg" alt="a blue infinity logo"></span>ives
+                    </h1>
                 </div>
             </div>
         </section>
