Start of the footer

--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
             </div>
         </section>
 
+        <footer class="footer">
+            
+        </footer>
     </main>
 
 </body>
