--- a/index.html
+++ b/index.html
@@ -182,7 +182,56 @@
         </section>
 
         <footer class="footer">
-            
+            <div class="footer__container">
+                <div class="footer__description">
+                    <div class="footer-description__1st-child">
+                        <h2 class="footer__heading">
+                            say hi
+                        </h2>
+
+                        <div class="footer__socials">
+                            <a href="">X</a>
+                            <a href="">Instagram</a>
+                            <a href="">LinkedIn</a>
+                            <a href="">Behance</a>
+                        </div>
+                    </div>
+
+                    <div class="footer-description__2nd-child">
+                        <div class="footer__nav-container">
+                            <h3 class="footer-nav__heading">
+                                Product
+                            </h3>
+
+                            <ul class="footer-nav__menu">
+                                <li><a href="#">Jobs</a></li>
+                                <li><a href="#">Portfolios</a></li>
+                                <li><a href="#">Messaging</a></li>
+                                <li><a href="#">Give me Gigs!</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="footer__nav-container">
+                            <h3 class="footer-nav__heading">
+                                About Us
+                            </h3>
+
+                            <ul class="footer-nav__menu">
+                                <li><a href="#">Company Policy</a></li>
+                                <li><a href="#">Customer Care</a></li>
+                                <li><a href="#">+234 8143317161</a></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="footer__brand">
+                    <h1 class="footer__logo">
+                        Cre<span class="infinity-logo-wf"><img src="./images/logo-white.svg" alt="a blue infinity logo"></span>ives
+                    </h1>
+                </div>
+            </div>
         </footer>
     </main>
 
